# f1-dbt-duckdb

./: .env  .env_template  .gitignore  .sqlfluff  Dockerfile  Makefile  README.md  dagster.yaml  docker-compose.yaml  pyproject.toml  query_data.ipynb  requirements.txt  setup.py
.github/workflows/: load.yml
dags/: dag_dbt.py  dag_staging.py
dags/staging/: staging.py
dbt/: __init__.py  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt/macros/: generate_schema_name.sql  merge.sql  source.sql
dbt/models/core/: _schema.yml  b_drivers_constructors.sql  circuits.sql  constructors.sql  d_circuit.sql  d_circuits.sql  d_constructor.sql  d_constructors.sql  d_driver.sql  d_drivers.sql  d_race.sql  d_races.sql  d_season.sql  d_seasons.sql  drivers.sql  f_constructor_standings.sql  f_driver_standings.sql  f_lap.sql  f_laps.sql  f_pitstop.sql  f_pitstops.sql  f_qualifying.sql  f_result.sql  f_results.sql  races.sql  seasons.sql
dbt/models/dm/: _schema.yml  dim_drivers.sql
dbt/models/export/: exp_d_drivers.sql  exp_f_results.sql
dbt/models/stage/ergast/: _schema.yml  _sources.yml  ergast_circuits.sql  ergast_constructor_results.sql  ergast_constructor_standings.sql  ergast_constructors.sql  ergast_driver_standings.sql  ergast_drivers.sql  ergast_lap_times.sql  ergast_laps.sql  ergast_pit_stops.sql  ergast_pitstops.sql  ergast_qualifying.sql  ergast_races.sql  ergast_results.sql  ergast_seasons.sql  ergast_status.sql
dbt/snapshots/: _schema.yml  d_drivers_scd.sql
foneload/: __main__.py  ergast.py  staging.py
foneplatform/: __init__.py  assets.py  resources.py  schedules.py
foneplatform/assets/: __init__.py  dbt.py  ergast.py
foneplatform/resources/: __init__.py  dbt_resource.py  ergast_resource.py  io_manager.py
staging/: ergast.py  staging.py
