[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "f1dbtduckdb"
version = "0.2.0"
description = "Experimenting with dbt/DuckDB using Ergast API as main source"
readme = "README.md"
requires-python = ">= 3.10"
urls.homepage = "https://github.com/frizzleqq/f1-dbt-duckdb"
classifiers = [
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

dependencies = [
  "dagster-dbt>=0.22.0",
  "dagster-webserver>=1.6.0",
  "dbt-duckdb>=1.6.0",
  "duckdb>=0.7.0",
  "pandas>=2.0.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  # development & testing tools
  "black>=23.0.0, <24.0.0",
  "isort>=5.0.0, <6.0.0",
  "mypy>=1.0.0, <2.0.0",
  "ruff",
  "sqlfluff-templater-dbt>=2.0.0, <3.0.0",
]

[project.scripts]
foneload = "foneload.__main__:main"

[tool.dagster]
module_name = "foneplatform"
code_location_name = "foneplatform"

[tool.setuptools]
packages = ["foneload", "dbt"]

[tool.setuptools.package-data]
dbt = [
  "*.yml",
  "macros/*",
  "models/core/*",
  "models/export/*",
  "models/stage/ergast/*",
]

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = "ergast,staging,pandas,requests,requests.adapters"
ignore_missing_imports = true

[tool.ruff]
line-length = 88
